<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/clapper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/scenestream_logo" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/welcome_back"
            android:textColor="#FF4081"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editEmail"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_bg"
            android:padding="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintTextFieldSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/editPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:background="@drawable/edittext_bg"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/togglePassword"
                android:layout_width="45dp"
                android:layout_height="53dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/toggle_password_visibility"
                android:src="@drawable/toggle_closed" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pink_primary"
            android:text="@string/login"
            android:textColor="#3E2723"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/linkSignUp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#C51162"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
<!--This file is completed-->